--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@nuxtjs/google-fonts": "^3.2.0",
     "@nuxtjs/tailwindcss": "^6.12.0",
     "@tanstack/vue-query": "^5.40.0",
+    "@types/jsonwebtoken": "^9.0.6",
+    "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.9.8",
     "nuxt": "^3.11.2",
     "primeicons": "^7.0.0",
