--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@nuxtjs/google-fonts": "^3.2.0",
     "@nuxtjs/tailwindcss": "^6.12.0",
     "@tanstack/vue-query": "^5.40.0",
+    "@types/bcrypt": "^5.0.2",
     "@types/jsonwebtoken": "^9.0.6",
+    "bcrypt": "^5.1.1",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.9.8",
     "nuxt": "^3.11.2",
