--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@hebilicious/vue-query-nuxt": "^0.3.0",
     "@nuxtjs/google-fonts": "^3.2.0",
     "@nuxtjs/tailwindcss": "^6.12.0",
+    "@pinia/nuxt": "^0.5.1",
     "@tanstack/vue-query": "^5.40.0",
     "@types/bcrypt": "^5.0.2",
     "@types/jsonwebtoken": "^9.0.6",
@@ -20,6 +21,7 @@
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.9.8",
     "nuxt": "^3.11.2",
+    "pinia": "^2.1.7",
     "primeicons": "^7.0.0",
     "primevue": "^3.52.0",
     "vue": "^3.4.27",
