--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/bcrypt": "^5.0.2",
     "@types/jsonwebtoken": "^9.0.6",
     "bcrypt": "^5.1.1",
+    "dayjs": "^1.11.11",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.9.8",
     "nuxt": "^3.11.2",
